fix: add style link

--- a/index.html
+++ b/index.html
@@ -3,5 +3,16 @@
     <head>
         <meta charset="utf-8"
         <title>Landing Page</title>
+        <link red="stylesheet" href="style.css">
     </head>
+
+
+<body>
+
+
+
+
+
+</body>
+
 </html>
