docs: correct title

--- a/index.html
+++ b/index.html
@@ -2,17 +2,32 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"
-        <title>Landing Page</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Landing Page!</title>
         <link red="stylesheet" href="style.css">
     </head>
 
 
-<body>
+    <body>
+    <div class="header">
+<!-- add link list for header-->
+
+    </div>
+
+    <div class="center-content">
+<!-- for our random info subsection with 4 places-->
+    </div>
+
+    <div class="testimonial">
+<!-- for our quote section -->
+    </div>
+
+    <div class="footer">
+<!-- sign up section-->
+    </div>
 
 
-
-
-
-</body>
+    </body>
 
 </html>
