--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Landing Page!</title>
-        <link red="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
     </head>
 
 <!-- DO THE HTML PART FIRST-->
     <body>
-    <div class="header">
-        <div class="header-links">
+    <div class="body">
+        <div class="header">
             <ul>
                 <a id="header-link-one" href="#">header link one</a>
                 <a id="header-link-two" href="#">header link two</a>
@@ -22,30 +19,30 @@
             </ul>
         </div>
 
-    <div class="title-content-container">
-        <div class="title">This website is awesome</div>
-        <div class="title-subcontent">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+        <div class="title-content-container">
+            <div class="title">This website is awesome</div>
+            <div class="title-subcontent">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
     
-    <div class="sign-up-button-one"> <button>Sign up</button></div>
+        <div class="sign-up-button-one"> <button>Sign up</button></div>
 
-    <div class="center-content-container">
-        <div class="center-info">Some random information.</div>
-        <div class="box-one">this is some subtext under an illustration or image</div>
-        <div class="box-two">this is some subtext under an illustration or image</div>
-        <div class="box-three">this is some subtext under an illustration or image</div>
-        <div class="box-four">this is some subtext under an illustration or image</div>
-    </div>
+        <div class="center-content-container">
+            <div class="center-info">Some random information.</div>
+            <div class="box-one">this is some subtext under an illustration or image</div>
+            <div class="box-two">this is some subtext under an illustration or image</div>
+            <div class="box-three">this is some subtext under an illustration or image</div>
+            <div class="box-four">this is some subtext under an illustration or image</div>
+        </div>
 
-    <div class="testimonial">
-        <div class="testimonial-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div class="testimonial-writer">- Thor, God of Thunder</div>
+        <div class="testimonial">
+            <div class="testimonial-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="testimonial-writer">- Thor, God of Thunder</div>
+        </div>
     </div>
-
-    <div class="footer">
-        <div class="footer-title">Call to action! It's time!</div>
-        <div class="footer-subtext">Sign up for our product by clicking that button right over there!</div>
-        <div class="button-two"><button>Sign up</button></div>
-    </div>
+        <div class="footer">
+            <div class="footer-title">Call to action! It's time!</div>
+            <div class="footer-subtext">Sign up for our product by clicking that button right over there!</div>
+            <div class="button-two"><button>Sign up</button></div>
+        </div>
 
 
     </body>
