Fix: labeled placeholder box

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="header-color">
             <div class="header">
                 <div class="header-logo">Header Logo</div>
-                <div class="insertimagehere"></div>
+                <div class="insertimagehere">this is a placeholder image</div>
 
         <div class="header-links">
             <ul>
-                <a id="header-link-one" href="#">header link one</a>
-                <a id="header-link-two" href="#">header link two</a>
-                <a id="header-link-three" href="#">header link three</a>
+               <li><a id="header-link-one" href="#">header link one</a> </li>
+                <li><a id="header-link-two" href="#">header link two</a></li>
+                <li><a id="header-link-three" href="#">header link three</a></li>
             </ul>
 
 
